move memory setup of of generic start script